fix reload command not work