@@ -4,21 +4,19 @@ import org.bukkit.plugin.java.JavaPlugin;
 import xyz.hynse.greenchunk.command.ReloadCommand;
 import xyz.hynse.greenchunk.command.SlimeCommand;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class GreenChunk extends JavaPlugin {
 
     @Override
     public void onEnable() {
-        register();
-        saveDefaultConfig();
         reloadConfig();
-
-
+        registerCommands();
     }
-    private void register() {
+
+    private void registerCommands() {
         getCommand("slime").setExecutor(new SlimeCommand(this));
         getCommand("greenchunkreload").setExecutor(new ReloadCommand(this));
-        getCommand("slimereload").setAliases(Arrays.asList("greenchunkreload"));
+        getCommand("slimereload").setAliases(List.of("greenchunkreload"));
     }
 }
